tdf#122748 Don't restore previous language selection

Change-Id: I8688c65695080804bae22209ed5d4890ced1a8dc
Reviewed-on: https://gerrit.libreoffice.org/66678
Tested-by: Jenkins
Reviewed-by: Szymon Kłos <szymon.klos@collabora.com>
(cherry picked from commit 1b1999009962b9d79858139bd7573947f78e6669)